# kaggle

./: .gitignore  aws-ami-startup.sh  build-birdclef-2021.sh  build-bristol-myers-squibb.sh  build-cassava-leaf-disease-classification.sh  build-rfcx-species-audio-detection.sh  build.sh
bristol-myers-squibb/: sample_001.py
cassava-leaf-disease-classification/: .#sample.py  cassava-leaf-disease-classification.yml  sample.py  sample_000.py  sample_001.py
chaii-hindi-and-tamil-question-answering/: pyproject.toml  sample.py  yapfG8I1EF.py
chaii-hindi-and-tamil-question-answering/tests/: test_chaii_hindi_and_tamil_question_answering.py
feedback-prize-english-language-learning/: build-dev-container-multipass-arm64.sh  pyproject.toml
jigsaw-toxic-severity-rating/: pyproject.toml  sample_001.py
jigsaw-toxic-severity-rating/tests/: test_jigsaw_toxic_severity_rating.py
lyft/: requirements.txt
lyft/sample/: train.py
nbme-score-clinical-patient-notes/: eda.py  pyproject.toml  requirements.txt  sample_001.py
novozymes-enzyme-stability-prediction/: build-dev-container-multipass-arm64.sh
open-problems-multimodal/: build-dev-container-multipass-arm64.sh  dev.arm64.Dockerfile  pyproject.toml
otto-recommender-system/: build-dev-container-multipass-arm64.sh  eda_20220105.py  ex_20220104.py  pyproject.toml
rfcx-species-audio-detection/: sample_00.py  sample_000.py
us-patent-phrase-to-phrase-matching/: build-multipass.sh  deberta-v3-large_01.py  deberta-v3-large_02.py  dev.multipass.Dockerfile  eda.py  pyproject.toml  requirements.txt
