[tool.poetry]
name = "chaii-hindi-and-tamil-question-answering"
version = "0.1.0"
description = ""
authors = ["tsukudamayo <tsukudamayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
tqdm = "^4.62.3"
scikit-learn = "^1.0.1"
torch = "^1.10.0"
transformers = "^4.12.2"
apex = "^0.9.10-alpha.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.8.0"
mccabe = "^0.6.1"
pydocstyle = "^6.1.1"
pyflakes = "^2.4.0"
pylint = "^2.11.1"
rope = "^0.21.0"
yapf = "^0.31.0"
virtualenv = "^20.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
