[tool.poetry]
name = "jigsaw-toxic-severity-rating"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
torch = "^1.10.0"
tqdm = "^4.62.3"
scikit-learn = "^1.0.1"
transformers = "^4.12.5"
colorama = "^0.4.4"
wandb = "^0.12.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
