[tool.poetry]
name = "nbme-score-clinical-patient-notes"
version = "0.1.0"
description = ""
authors = ["tsukudamayo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
