[tool.poetry]
name = "nbme-score-clinical-patient-notes"
version = "0.1.0"
description = ""
authors = ["tsukudamayo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.2.4"
wordcloud = "^1.8.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pyright = "^1.1.241"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
