[tool.poetry]
name = "otto"
version = "0.1.0"
description = ""
authors = ["tsukudamayo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
seaborn = "^0.12.2"
matplotlib = "^3.6.2"
kaggle = "^1.5.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
