[tool.poetry]
name = "us-patent-phrase-to-phrase-matching"
version = "0.1.0"
description = ""
authors = ["tsukudamayo <tsukudamayo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
joblib = "^1.1.0"
scipy = "^1.8.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
tqdm = "^4.64.0"
scikit-learn = "^1.0.2"
torch = "^1.11.0"
tokenizers = "^0.12.1"
transformers = "^4.18.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pyright = "^1.1.243"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
